# scikit-learn-mooc

./: .buildinfo  .gitignore  CONTRIBUTING.md  concluding_remarks.html  concluding_remarks_video.html  full-index.ipynb  genindex.html  index.html  local-install-instructions.md  objects.inv  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setting_stage_slides.html  toc.html  workflow-notes.md
_sources/: setting_stage_slides.md
advanced_topics/: advanced_topics_index.html  advanced_topics_module_intro.html  advanced_topics_resources.html  advanced_topics_slides.html
appendix/: acknowledgement.html  datasets_intro.html  glossary.html  notebook_timings.html  toc_redirect.html
jupyter-book/: _config.yml  _toc.yml  concluding_remarks.md  index.md
linear_models/: linear_models_intuitions_index.html  linear_models_module_intro.html  linear_models_module_take_away.html  linear_models_quiz_m4_01.html  linear_models_slides.html
ml_concepts/: quiz_intro_01.html  slides.html
notebooks/: 01_tabular_data_exploration.ipynb  02_preprocessing_categorical.ipynb  02_preprocessing_combine.ipynb  02_preprocessing_numerical.ipynb  03_categorical_pipeline.ipynb  03_categorical_pipeline_column_transformer.ipynb  03_categorical_pipeline_ex_01.ipynb  03_categorical_pipeline_sol_01.ipynb  cross_validation_ex_01.ipynb  cross_validation_sol_01.ipynb  final_exercise.ipynb  parameter_tuning_grid_search.ipynb  parameter_tuning_nested.ipynb
overfit/: bias_vs_variance_quiz_m2_03.html  bias_vs_variance_slides.html  learning_validation_curves_quiz_m2_02.html  (+9 more)
(+145 files in other folders)
